# immediate_stats

./: Cargo.toml  README.md
.github/workflows/: publish.yml  rust.yml
immediate_stats/: Cargo.toml  README.md
immediate_stats/examples/: simple_bevy.rs  simple_bevy_auto_plugin.rs  simple_bevy_butler.rs  simple_main_loop.rs
immediate_stats/src/: bevy.rs  lib.rs  modifier.rs  stat.rs
immediate_stats/src/bevy/: auto_plugin.rs  butler.rs
immediate_stats/src/stat/: modifier.rs
immediate_stats/tests/: bevy.rs  bevy_auto_plugin.rs  bevy_butler.rs  derive.rs  modifier.rs  stat.rs
immediate_stats_macros/: Cargo.toml
immediate_stats_macros/src/: bevy.rs  bevy_auto_plugin.rs  bevy_butler.rs  derive_enum.rs  derive_struct.rs  lib.rs  stat_attributes.rs
immediate_stats_macros/src/bevy/: butler.rs
src/: lib.rs
