[package]
name = "immediate_stats"
version = "0.1.1"
edition = "2024"
description = "Game stats that reset every frame, inspired by immediate mode rendering."
categories = ["game-development", "data-structures"]
keywords = ["game", "gamedev", "bevy", "stats", "proc-macro"]
repository = "https://github.com/AlephCubed/immediate_stats"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
bevy = ["bevy_ecs", "bevy_app", "bevy_reflect", "immediate_stats_macros/bevy"]
bevy_butler = ["bevy", "bevy-butler", "immediate_stats_macros/bevy_butler"]

[dependencies]
bevy_app = { version = "0.16.0", default-features = false, optional = true, features = [
  "bevy_reflect",
] }
bevy-butler = { version = "0.6.1", optional = true }
bevy_ecs = { version = "0.16.0", default-features = false, optional = true, features = [
  "bevy_reflect",
] }
bevy_reflect = { version = "0.16.0", default-features = false, optional = true }
immediate_stats_macros = { path = "../immediate_stats_macros", version = "0.1.0", default-features = false }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false }

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[example]]
name = "simple_main_loop"
path = "examples/simple_main_loop.rs"

[[example]]
name = "simple_bevy"
path = "examples/simple_bevy.rs"
required-features = ["bevy"]

[[example]]
name = "simple_bevy_butler"
path = "examples/simple_bevy_butler.rs"
required-features = ["bevy_butler"]
