[package]
name = "immediate_stats"
version = "0.4.0-rc.1"
edition = "2024"
description = "Game stats that reset every frame, inspired by immediate mode GUI."
categories = ["game-development", "data-structures"]
keywords = ["game", "gamedev", "bevy", "stats", "proc-macro"]
repository = "https://github.com/AlephCubed/immediate_stats"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[features]
bevy = [
  "dep:bevy_ecs",
  "dep:bevy_app",
  "dep:bevy_reflect",
  "immediate_stats_macros/bevy",
]
bevy_auto_plugin = [
  "bevy",
  "dep:bevy_auto_plugin",
  "immediate_stats_macros/bevy_auto_plugin",
]

[dependencies]
bevy_app = { version = "0.18", default-features = false, optional = true, features = [
  "bevy_reflect",
] }
bevy_auto_plugin = { git = "https://github.com/StrikeForceZero/bevy_auto_plugin", optional = true }
bevy_ecs = { version = "0.18", default-features = false, optional = true, features = [
  "bevy_reflect",
] }
bevy_reflect = { version = "0.18", default-features = false, optional = true }
immediate_stats_macros = { path = "../immediate_stats_macros", version = "0.4.0-rc.1", default-features = false }

[dev-dependencies]
bevy = { version = "0.18", default-features = false }

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[[example]]
name = "simple_main_loop"
path = "examples/simple_main_loop.rs"

[[example]]
name = "simple_bevy"
path = "examples/simple_bevy.rs"
required-features = ["bevy"]

[[example]]
name = "simple_bevy_auto_plugin"
path = "examples/simple_bevy_auto_plugin.rs"
required-features = ["bevy_auto_plugin"]
