[package]
name = "immediate_stats_macros"
version = "0.3.0-rc.1"
edition = "2024"
description = "Game stats that reset every frame, inspired by immediate mode GUI."
categories = ["game-development", "data-structures"]
keywords = ["game", "gamedev", "bevy", "stats", "proc-macro"]
repository = "https://github.com/AlephCubed/immediate_stats"
license = "MIT OR Apache-2.0"
authors = ["AlephCubed"]
readme = "../README.md"

[package.metadata.docs.rs]
all-features = true

[lib]
proc-macro = true

[features]
bevy = []
bevy_auto_plugin = ["bevy"]

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
